--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10188,71 +10188,66 @@ body {
 
 /****** HOME ******/
 
-.column {
-  height: 100vh;
-  width: 100%;
-  text-align: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+.home-content {
+  padding-top: 42px;
 }
 
-.info {
-  margin-bottom: 10%;
-  padding: 2em;
-}
-
-h2 {
-  font-size: 2rem;
-  padding: 0 1em;
-}
-
-.col1 {
-  background: url("/images/bg1.jpg") no-repeat top center;
-  background-size: cover;
-}
-
-.col2 {
-  color: rgba(0, 0, 0, 0.7);
-  background-color: white;
-}
-
-.half-containers {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-  overflow: hidden;
-  padding: 1em;
-}
-
-.dark {
-  background-color: rgba(0, 0, 0, 0.7);
-  color: white;
-}
-
-.info-or {
-  display: block;
-  margin: 10px 0;
-}
-
-@media all and (min-width: 500px) {
-  .wrapper {
+@media only screen and (min-width: 601px) {
+  .home-content {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
   }
 }
 
-@media all and (max-width: 500px) {
-  .col1 {
+.home-content .column {
+  width: 100%;
+  height: 100vh;
+  text-align: center;
+}
+
+.home-content .column.col1 {
+  background: url("/images/bg1.jpg") no-repeat top center;
+  background-size: cover;
+}
+
+@media only screen and (max-width: 992px) {
+  .home-content .column.col1 {
     display: none;
   }
+}
+
+.home-content .column.col2 {
+  display: grid;
+  grid-auto-rows: 1fr;
+  height: 100vh;
+}
+
+.home-content .column.col2 .section {
+  padding: 2rem;
+}
+
+.home-content .column.col2 .section > div {
+  width: 100%;
+}
+
+.home-content .column.col2 .section .info-or {
+  display: block;
+  margin: 7px 0;
+}
+
+.home-content .column.col2 .section:not(:first-child):not(:last-child) {
+  border-top: 1px solid #dddddd;
+  border-bottom: 1px solid #dddddd;
+}
+
+.home-content .column.col2 .section:first-child,
+.home-content .column.col2 .section:last-child {
+  background-color: #fff;
+}
+
+.home-content .column .h5 {
+  margin-bottom: 25px;
 }
 
 /****** MAP ******/
