--- a/resources/assets/sass/style/_style.scss
+++ b/resources/assets/sass/style/_style.scss
@@ -290,7 +290,7 @@ body {
         line-height:inherit;
         background-color:transparent;
         -webkit-box-shadow:none;
-        box-shadow:none;
+                box-shadow:none;
 
         ul li a {
             font-size:inherit;
@@ -331,102 +331,66 @@ body {
 
 
 /****** HOME ******/
-.column {
-	height: 100vh;
-	width: 100%;
-	text-align: center;
-	display: flex;
-	align-items: center;
-	justify-content: center;
+.home-content {
+    padding-top: 42px;
+
+    @media #{$medium-and-up} {
+        display: flex;
+    }
+
+    .column {
+        width: 100%;
+        height: 100vh;
+        text-align: center;
+        // display: flex;
+        // align-items: center;
+        // justify-content: center;
+
+
+        &.col1 {
+            background: url('/images/bg1.jpg') no-repeat top center;
+            -webkit-background-size: cover;
+               -moz-background-size: cover;
+                 -o-background-size: cover;
+                    background-size: cover;
+
+            @media #{$medium-and-down} {
+                display: none;
+            }
+        }
+
+        &.col2 {
+            display: grid;
+            grid-auto-rows: 1fr;
+            height: 100vh;
+
+            .section {
+                padding: 2rem;
+
+                > div {
+                    width: 100%;
+                }
+                .info-or {
+                    display: block;
+                    margin: 7px 0;
+                }
+            }
+            .section:not(:first-child):not(:last-child) {
+                border-top: 1px solid #dddddd;
+                border-bottom: 1px solid #dddddd;
+            }
+            .section:first-child,
+            .section:last-child {
+                background-color: #fff;
+            }
+        }
+
+        .h5 {
+            margin-bottom: 25px;
+        }
+    }
 }
-.info {
-    margin-bottom: 10%;
-    padding: 2em;
-}
-h2 {
-    font-size: 2rem;
-    padding: 0 1em;
-}
-.col1 {
-	background: url('/images/bg1.jpg') no-repeat top center;
-	background-size: cover;
-}
-.col2 {
-    color: rgba(0,0,0,.7);
-    background-color: white; 
-    
-}
-.half-containers {
-  flex: 1 ;
-  overflow: hidden;
-  padding: 1em;
-}
-.dark {
-    background-color: rgba(0,0,0,.7);
-    color: white;
-    
-}
-.info-or {
-    display: block;
-    margin: 10px 0;
-}
-@media all and (min-width: 500px) {
-  .wrapper {
-    display: flex;
-  }
-}
-@media all and (max-width: 500px) {
-  .col1 {
-      display: none;
-  }
-}
 
-
-
-
-
-
-
-
-
-
-
-// .hero {
-//     position: relative;
-//     height: 100vh;
-//     -webkit-background-size: cover;
-//        -moz-background-size: cover;
-//          -o-background-size: cover;
-//             background-size: cover;
-
-//     .overlay {
-//         position: absolute;
-//         width: 100%;
-//         height: 100%;
-//         top: 0;
-//         left: 0;
-//         background-color: rgba(#000000, 0.5);
-//     }
-
-//     .hero-text {
-//         position: relative;
-//         width: 100%;
-//         padding-top: 20vh;
-//         color: #ffffff;
-//     }
-
-//     .hero-buttons {
-//         margin-top: 30vh;
-
-//         a {
-//             margin: 0 25px;
-//         }
-//     }
-
-//     &.hero-home {
-//         background: url('/images/home-bg.jpg') no-repeat center center;
-//     }
-// }
 
 
 
