--- a/resources/assets/sass/style/_style.scss
+++ b/resources/assets/sass/style/_style.scss
@@ -390,8 +390,7 @@ body {
                     margin: 7px 0;
                 }
             }
-            .section:not(:first-child):not(:last-child) {
-                border-top: 1px solid #dddddd;
+            .section:not(:last-child) {
                 border-bottom: 1px solid #dddddd;
             }
             .section:first-child,
